# PORR_JPEG

./: .gitignore  CMakeLists.txt  JpegCompressionSequence.vcxproj  JpegCompressionSequence.vcxproj.filters  README.md  bmp_loader.c  bmp_loader.h  build.sh  cuda_jpeg_8.sln  dct.c  dct.h  jpeg.c  jpeg_compressor.c  jpeg_rgb.c  jpeg_writer.c  jpeg_writer.h  parallel_and_vectorized_jpeg_benchmark.c  parallel_jpeg_benchmark.c  plot_results.py  quantization.h  sequential_jpeg_benchmark.c  timer.c  timer.h  vectorized_jpeg_benchmark.c  ycc_converter.c  ycc_converter.h
cuda_jpeg_8/: bmp_loader.c  bmp_loader.h  cuda_full_jpeg_benchmark.c  cuda_jpeg_8.vcxproj  cuda_jpeg_benchmark.c  dct.c  dct.h  dctCUDAv2.cu  huffman.c  huffman.h  jpeg_compressor.c  jpeg_compressor_CUDA.c  jpeg_compressor_Cuda_naive.c  jpeg_compressor_naive.c  jpeg_full_compressor_CUDA.c  jpeg_full_compressor_CUDAwithOpenMP.c  jpeg_openmp_benchmark.c  quantization.c  timer.c  timer.h  ycc_converter.c  ycc_converter.h
cuda_jpeg_8/kernels/: dctCUDA.cu  dctCUDA.h  dctCUDAv2.cu  dctCUDAv2.h  dct_with_quantization.cu  dct_with_quantization.h  fullCUDA.cu  fullCUDA.h  ycc_conversion_with_dct.cu  ycc_conversion_with_dct.h
